# tokuSolutions

./: .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc  CLEANUP_RESULTS.md  CLEANUP_SETUP.md  LICENSE  README.md  docai_activities.py  docai_workflow.py  html_template.py  package-lock.json  package.json  pyproject.toml  server.py  tokuSolutions.py  vitest.config.js  worker.py
.github/workflows/: lint.yml  static.yml  test.yml
credentials/: README.md
docs/: GITHUB_INTEGRATION.md  MODULE_ARCHITECTURE.md  PERFORMANCE_IMPROVEMENTS.md  TESTING.md
manuals/CSM Sengoku Driver Manual/: translations.json
manuals/CSM-Den-O-Belt-v2/: translations.json
manuals/CSM-DenGasher/: translations.json
manuals/CSM-Faiz-Driver-NEXT/: translations.json
manuals/CSM-Fang-Memory/: translations.json
manuals/DX-Ridewatch/: translations.json
manuals/DenGasher/: translations.json
manuals/Faiz Driver Next/: translations.json
manuals/Memorial Dino Buckler/: translations.json
manuals/Memorial Zanglass sword/: translations.json
manuals/Memorial-Dino-Brace/: translations.json
manuals/Premium DX Zein Driver/: translations.json
manuals/Ranger-Key-35-Red-Set/: translations.json
manuals/Ranger-Key-Memorial-Edition-35-Reds-Set/: translations.json
manuals/ShinUltraman/: translations.json
manuals/Zero One Limited Clear/: translations.json
output/: README.md  app.js  index.html  manifest.json  styles.css
src/: __init__.py  activities.py  cleanup.py  cli.py  shopify_search.py  tagging.py  tokullectibles.py  worker.py  workflow.py
web/: app.js  index.html  meta.json  styles.css  tags.json
web/js/: config.js  (+8 more)
(+30 files in other folders)
